name:              Slog
version:           0.1

-- A short (one-line) description of the package.
synopsis:          A library and tools for logging QSOs

-- A longer description of the package.
-- description:

license:           GPL-2
license-file:      LICENSE
author:            Chris Lumens
maintainer:        chris@bangmoney.org
build-type:        Simple
cabal-version:     >=1.8

data-dir:          data
data-files:        qsoadd.ui

library
  exposed-modules: Slog.Cluster,
                   Slog.DB,
                   Slog.DXCC,
                   Slog.LOTW,
                   Slog.QSO,
                   Slog.Utils,
                   Slog.Formats.ADIF.Parser,
                   Slog.Formats.ADIF.Types,
                   Slog.Formats.ADIF.Utils,
                   Slog.Formats.ADIF.Writer,
                   Slog.Lookup.Lookup,
                   Slog.Rigctl.Rigctl,
                   Slog.Rigctl.Commands.Class,
                   Slog.Rigctl.Commands.Ask,
                   Slog.Rigctl.Commands.Tell,
                   ToolLib.Config

  build-depends:   base,
                   containers,
                   convertible,
                   directory,
                   filepath,
                   mtl,
                   network,
                   parsec,
                   process,
                   split,
                   text,
                   time,
                   xml,
                   ConfigFile,
                   HDBC,
                   HDBC-sqlite3,
                   HTTP,
                   MissingH

executable editor
  main-is:         editor.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   esqueleto,
                   gtk,
                   mtl,
                   persistent-sqlite,
                   persistent-template,
                   text,
                   Slog

executable qsoadd
  main-is:         qsoadd.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   gtk,
                   mtl,
                   old-locale,
                   time,
                   HDBC,
                   MissingH,
                   Slog

executable qsoconfirm
  main-is:         qsoconfirm.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   mtl,
                   HDBC,
                   Slog

executable qsoreport
  main-is:         qsoreport.hs
  hs-source-dirs:  tools/qsoreport

  other-modules:   Filter,
                   Report,
                   Types

  build-depends:   base,
                   containers,
                   xhtml,
                   Slog

executable qsoupload
  main-is:         qsoupload.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   directory,
                   Slog

executable unworked
  main-is:         unworked.hs
  hs-source-dirs:  tools/unworked

  other-modules:   Filter

  build-depends:   base,
                   Slog
