name:              Slog
version:           0.1

-- A short (one-line) description of the package.
synopsis:          A library and tools for logging QSOs

-- A longer description of the package.
-- description:

license:           GPL-2
license-file:      LICENSE
author:            Chris Lumens
maintainer:        chris@bangmoney.org
build-type:        Simple
cabal-version:     >=1.8

data-dir:          data
data-files:        qsoadd.ui

library
  exposed-modules: Slog.Cluster,
                   Slog.DB,
                   Slog.DXCC,
                   Slog.LOTW,
                   Slog.QSO,
                   Slog.Utils,
                   Slog.Formats.ADIF.Parser,
                   Slog.Formats.ADIF.Types,
                   Slog.Formats.ADIF.Utils,
                   Slog.Formats.ADIF.Writer,
                   Slog.Lookup.Lookup,
                   Slog.Rigctl.Rigctl,
                   Slog.Rigctl.Commands.Class,
                   Slog.Rigctl.Commands.Ask,
                   Slog.Rigctl.Commands.Tell,
                   ToolLib.Config

  build-depends:   base,
                   containers,
                   convertible,
                   directory,
                   esqueleto,
                   filepath,
                   mtl,
                   network,
                   parsec,
                   persistent-sqlite,
                   persistent-template,
                   process,
                   split,
                   text,
                   time,
                   xml,
                   ConfigFile,
                   HDBC,
                   HTTP,
                   MissingH

executable editor
  main-is:         editor.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   esqueleto,
                   gtk,
                   mtl,
                   persistent-sqlite,
                   persistent-template,
                   text,
                   Slog

executable qsoadd
  main-is:         qsoadd.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   MissingH,
                   Slog

executable qsoconfirm
  main-is:         qsoconfirm.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   MissingH,
                   mtl,
                   Slog

executable qsoreport
  main-is:         qsoreport.hs
  hs-source-dirs:  tools/qsoreport

  other-modules:   Filter,
                   Report,
                   Types

  build-depends:   base,
                   containers,
                   xhtml,
                   Slog,
                   MissingH

executable qsoupload
  main-is:         qsoupload.hs
  hs-source-dirs:  tools

  build-depends:   base,
                   directory,
                   Slog

executable unworked
  main-is:         unworked.hs
  hs-source-dirs:  tools/unworked

  other-modules:   Filter

  build-depends:   base,
                   MissingH,
                   Slog

executable slog
  main-is:         slog.hs
  hs-source-dirs:  tools/slog

  other-modules:   Contest,
                   Dialogs.Contest,
                   Dialogs.QTH,
                   State,
                   Types,
                   UI

  build-depends:   base,
                   cond,
                   gtk,
                   mtl,
                   old-locale,
                   text,
                   time,
                   utf8-string,
                   Slog
